--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": "~0.8.0"
   },
   "dependencies": {
+    "http-server": "~0.5.5",
     "underscore": "~1.5.1",
     "express": "~2.5.9",
     "mustache": "~0.7.2",
